--- a/package.json
+++ b/package.json
@@ -3,31 +3,21 @@
   "version": "1.0.0",
   "description": "There will be a bunch of useful stuff",
   "main": "index.tsx",
-  "scripts": {
-    "dev": "vite",
-    "start": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.4.1",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.4"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.3",
     "@types/socket.io": "^3.0.2",
     "express": "^5.1.0",
     "jsx": "^0.9.89",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "phaser": "^3.88.2",
     "socket.io": "^4.8.1"
   }
 }
