--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^19.1.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "uuid": "^11.1.0",
     "webfontloader": "^1.6.28"
   }
 }
