--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "There will be a bunch of useful stuff",
   "main": "index.tsx",
   "scripts": {
-    "game": "NODE_OPTIONS=--max-old-space-size=4096 concurrently \"redis-server\" \"npm run server\" \"npm start\"",
+    "game": "cross-env NODE_OPTIONS=--max-old-space-size=4096 concurrently \"redis-server\" \"npm run server\" \"npm start\"",
     "test": "jest",
     "test:cache": "tsx backend/tests/cacheTest.ts",
     "test:assets": "jest backend/tests/assetsOpsTest.ts",
@@ -12,8 +12,8 @@
     "test:simple-client": "tsx backend/tests/simple-test-client.ts",
     "test:db": "tsx backend/tests/dbTest.ts",
     "dev": "vite --port 30006 --host 0.0.0.0",
-    "start": "NODE_OPTIONS=--max-old-space-size=4096 vite phaser-game --port 30006 --host 0.0.0.0",
-    "server": "NODE_OPTIONS=--max-old-space-size=4096 HOST=0.0.0.0 tsx backend/server.ts",
+    "start": "cross-env NODE_OPTIONS=--max-old-space-size=4096 vite phaser-game --port 30006 --host 0.0.0.0",
+    "server": "cross-env HOST=0.0.0.0 NODE_OPTIONS=--max-old-space-size=4096 tsx backend/server.ts",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "live": "live-server --port=30006"
@@ -27,6 +27,7 @@
     "@types/webfontloader": "^1.6.38",
     "@vitejs/plugin-react": "^4.4.1",
     "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3",
     "file-loader": "^6.2.0",
     "jest": "^29.7.0",
     "live-server": "^1.2.2",
@@ -45,6 +46,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "@types/socket.io": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "ioredis": "^5.6.1",
