--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - newmergingbranch    # or your watched branch
+      - main
+  workflow_dispatch:
 
 jobs:
   deploy:
